Source code formatting

--- a/drestaurant-apps/drestaurant-microservices-websockets/drestaurant-microservices-websockets-command-courier/src/main/resources/static/index.html
+++ b/drestaurant-apps/drestaurant-microservices-websockets/drestaurant-microservices-websockets-command-courier/src/main/resources/static/index.html
@@ -4,7 +4,8 @@
     <title>Hello Courier WebSocket</title>
 </head>
 <body onload="disconnect()">
-<noscript><h2 style="color: #ff0000">Seems your browser doesn't support Javascript! Websocket relies on Javascript being enabled. Please enable
+<noscript><h2 style="color: #ff0000">Seems your browser doesn't support Javascript! Websocket relies on Javascript being
+    enabled. Please enable
     Javascript and reload this page!</h2></noscript>
 <div>
     <div>
@@ -12,8 +13,8 @@
         <button id="disconnect" disabled="disabled" onclick="disconnect();">Disconnect</button>
     </div>
     <div id="conversationDiv">
-        <label>What is your first name?</label><input type="text" id="firstName" />
-        <label>What is your last name?</label><input type="text" id="lastName" />
+        <label>What is your first name?</label><input type="text" id="firstName"/>
+        <label>What is your last name?</label><input type="text" id="lastName"/>
         <button id="sendCommand" onclick="sendCommand();">Send</button>
         <p id="response"></p>
     </div>
