--- a/drestaurant-apps/drestaurant-monolith/src/main/resources/static/index.html
+++ b/drestaurant-apps/drestaurant-monolith/src/main/resources/static/index.html
@@ -14,7 +14,8 @@
 <a href="swagger-ui.html">HTTP API documentation</a>
 
 <h3 style="color: Grey;">Database</h3>
-<p>We use in-memory H2 SQL database to persist domain events and materialized views. Schema is recreated (drop and create) on application start</p>
+<p>We use in-memory H2 SQL database to persist domain events and materialized views. Schema is recreated (drop and
+    create) on application start</p>
 <p>You can access it <a href="h2-console">here.</a></p>
 <ul>
     <li>JDBC URL: jdbc:h2:mem:restaurant</li>
